--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
